# RtmpsTest

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/flyzebra/rtmps/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
librtmp/: build.gradle
librtmp/src/main/cpp/: CMakeLists.txt  Queue.h  Rtmp.cpp  Rtmp.h  RtmpPush.cpp  RtmpPush.h  common.h  publish_jni.cpp  push.cpp
librtmp/src/main/java/com/bill/mei/utils/rtmp/: RtmpHelper.java
